<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Blocktopograph</string>
    <string name="brand_sub">A community-made app</string>
    <string name="title_worlditem_list">Select a world</string>
    <string name="title_worlditem_detail">World</string>
    <string name="title_activity_world">World</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_changelog">Changelog</string>
    <string name="no_sdcard_access">Cannot open worlds, no read/write access on storage!
        Try restarting the app and accept the read/write permission request.</string>
    <string name="no_custom_markers_title">No custom markers!</string>
    <string name="no_custom_markers">There are no custom markers yet! \n
        You can create one by long-tapping on the place on the map where you want a marker,
            then tap \"Create custom marker\".
        Then choose a marker icon and a Y-coordinate.
        And then check if you can find it here!</string>
    <string name="app_about">
        This app is created by <b>Protol Lambda</b> (Link removed as he asked to),
        contributed by
        <a href="https://github.com/MithrilMania">@MithrilMania</a>,
        <a href="https://github.com/flagmaggot">@flagmaggot</a>,
        <a href="https://github.com/oO0oO0oO0o0o00">@MeowCat</a>,
        <a href="https://github.com/MiemieMethod">@MiemieMethod</a>,
        <a href="https://github.com/LordJunior">Manuel</a>,
        ScrapperBox25, Tcbdxh and many others as well.\n\n
        Available on Google Play.\n\n
        Current active github repository:
        <a href="https://github.com/oO0oO0oO0o0o00/blocktopograph">github.com/oO0oO0oO0o0o00/blocktopograph</a>
        Feel free to star or fork, help with the project or simply add your own language support.
        <b>Your github contribution is welcomed!</b>
        More information (including the roadmap, changelog and help-information) can be found at:
        <a href="http://blocktopograph.protolambda.com">blocktopograph.protolambda.com</a>. \n
        \n
        Please make a backup of all your loved MCPE worlds in case of data-corruption!\n
        NOTE: Minecraft might not load a whole world because of a single corrupt chunk of NBT!\n
        \n
            This app is built and tested for MCPE 1.9.x(beta), 1.8.x, 1.7.x, 1.6.x, 1.5.x, 1.4.x, 1.2.x, 1.1.x, 1.0.x, 0.16.x, 0.15.x, and 0.14.x\n
            Older MCPE versions are not supported.\n
        \n
        \n
        <i>Disclaimer</i>\n
        <b>This app is not affiliated with Minecraft, Mojang AB or Microsoft.</b>\n
        This is not an official but a fan made app.\n
        Minecraft is a trademark of Mojang AB.\n
        Please note:\n
            &#8226; NOT AN OFFICIAL MINECRAFT PRODUCT. NOT APPROVED BY OR ASSOCIATED WITH MOJANG.\n
            &#8226; THE APP IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND.\n
        \n
        \n
        <i>Used libraries</i>\n
        &#8226; <a href="https://github.com/Clans/FloatingActionButton">FloatingActionButton</a> \n
        &#8226; <a href="https://github.com/mithrilmania/TileView">
                    Tileview, fork by mithrilmania</a> \n
        &#8226; <a href="https://github.com/Mojang/leveldb-mcpe">leveldb-mcpe</a> \n
            with <a href="https://github.com/mithrilmania/android-leveldb">
                    android-leveldb, fork by mithrilmania</a> \n
        \n
        <i>Source code on GitHub:</i>\n
        <a href="https://github.com/mithrilmania/blocktopograph">github.com/mithrilmania/blocktopograph</a> \n
        \n
    </string>
    <string name="app_help">The app documentation can be found at (maybe out of date):
        <a href="http://blocktopograph.protolambda.com/help">
            blocktopograph.protolambda.com/help
        </a>.
    </string>
    <string name="app_changelog" formatted="false">
        Version: <xliff:g example="0.0.1" id="version">%1$s</xliff:g>
        <![CDATA[<br/><br/>
        Full changelog can be found at (out of date):
        <a href="http://blocktopograph.protolambda.com/changelog">
            blocktopograph.protolambda.com/changelog
        </a>]]>
    </string>
    <string name="world_seed_prefix">World seed:</string>
    <string name="map_water_mark" translatable="false">Blocktopograph</string>
    <string name="create_marker_info">
        Marker icons:\n
        &#8226; default_marker, blue_marker, green_marker, red_marker \n
        &#8226; Entity data-names (case sensitive) \n
        &#8226; Block data-names (case sensitive) \n
    </string>
    <string name="reloaded_world_list">Reloaded world list.</string>
    <string name="could_not_find_worlds">Could not find any worlds!</string>
    <string name="no_read_write_access">No read/write access to worlds.</string>
    <string name="storage_path_here">Storage path here…</string>
    <string name="open_world_custom_path">Open world with custom path</string>
    <string name="open">Open</string>
    <string name="action_import_shizuku">Importar de Minecraft (Shizuku)</string>
    <string name="shizuku_importing">Importando mundo…</string>
    <string name="shizuku_import_done">Mundo importado. Ya aparece en tu lista.</string>
    <string name="shizuku_no_worlds_found">No se encontraron mundos de Minecraft en Android/data. ¿Tienes Minecraft instalado y con al menos un mundo creado?</string>
    <string name="shizuku_pick_world_title">Elige un mundo para importar</string>
    <string name="shizuku_export_action">Exportar a Minecraft (.mcworld)</string>
    <string name="shizuku_exporting">Copiando cambios de vuelta a Minecraft…</string>
    <string name="shizuku_export_done">Cambios copiados. Reinicia Minecraft para verlos.</string>
    <string name="action_delete_selected">Eliminar seleccionados</string>
    <string name="delete_selected_none">Mantén presionado un mundo para seleccionarlo, luego toca este botón para eliminarlo.</string>
    <string name="delete_selected_confirm_title">¿Eliminar %1$d mundo(s)?</string>
    <string name="delete_selected_confirm_message">Esta acción no se puede deshacer.</string>
    <string name="delete_selected_done">Mundos eliminados.</string>
    <string name="browse_with_shizuku">Explorar (Shizuku)</string>
    <string name="action_import_mcworld_file">Importar .mcworld del dispositivo</string>
    <string name="action_import_world">Importar mundo</string>
    <string name="mcworld_preview_title">Vista previa del mundo</string>
    <string name="mcworld_preview_body">Nombre del mundo: %1$s\nNombre del archivo: %2$s\nTamaño: %3$s\nVersión: %4$s\nÚltima modificación: %5$s</string>
    <string name="mcworld_reading">Leyendo el archivo .mcworld…</string>
    <string name="mcworld_read_error">No se pudo leer ese archivo como un mundo de Minecraft válido: %1$s</string>
    <string name="mcworld_import_action">Importar</string>
    <string name="settings_title">Ajustes</string>
    <string name="settings_category_general">General</string>
    <string name="settings_custom_worlds_path_title">Carpeta de mundos personalizada</string>
    <string name="settings_custom_worlds_path_summary">Deja en blanco para usar la ruta por defecto (games/com.mojang/minecraftWorlds)</string>
    <string name="settings_category_shizuku">Shizuku</string>
    <string name="settings_shizuku_status_title">Estado de Shizuku (toca para revisar)</string>
    <string name="settings_shizuku_status_summary_unknown">Toca para revisar</string>
    <string name="settings_shizuku_status_summary_not_running">Shizuku no está corriendo</string>
    <string name="settings_shizuku_status_summary_granted">Activo y con permiso concedido ✓</string>
    <string name="settings_shizuku_status_summary_not_granted">Corriendo, pero sin permiso concedido</string>
    <string name="settings_category_plugins">Plugins</string>
    <string name="settings_plugins_installed_title">Plugins instalados</string>
    <string name="settings_plugins_installed_summary">%1$d encontrados en este dispositivo</string>
    <string name="settings_plugins_none_found">No se encontró ningún plugin instalado todavía.</string>
    <string name="settings_plugins_howto_title">Cómo crear un plugin</string>
    <string name="settings_plugins_howto_body">Un plugin es cualquier app con UNA actividad que declare este intent-filter en su AndroidManifest.xml:\n\n&lt;activity android:name=\".MiPlugin\" android:label=\"Mi Plugin\"&gt;\n  &lt;intent-filter&gt;\n    &lt;action android:name=\"com.mithrilmania.blocktopograph.action.WORLD_ACTION\" /&gt;\n    &lt;category android:name=\"android.intent.category.DEFAULT\" /&gt;\n  &lt;/intent-filter&gt;\n&lt;/activity&gt;\n\nBlocktopograph la va a listar automáticamente en el menú \"Plugins\" de cada mundo. Al tocarla, tu actividad recibe estos extras:\n\n• com.mithrilmania.blocktopograph.extra.WORLD_PATH (ruta absoluta de la carpeta del mundo)\n• com.mithrilmania.blocktopograph.extra.WORLD_NAME (nombre del mundo)\n\nCon eso ya puedes leer/escribir los archivos del mundo desde tu propia app. No necesitas ningún SDK ni depender de Blocktopograph.</string>
    <string name="settings_category_other">Otros</string>
    <string name="settings_clear_cache_title">Borrar caché</string>
    <string name="settings_clear_cache_done">Caché liberada: %1$d MB</string>
    <string name="settings_version_title">Versión</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_plugins">Plugins</string>
    <string name="plugins_none_for_world">No hay plugins instalados. Ve a Ajustes → Plugins para ver cómo crear uno.</string>
    <string name="inventory">Inventario</string>
    <string name="inventory_editor_hint">Toca un ítem para editarlo. Usa el botón + para agregar uno nuevo.</string>
    <string name="inventory_editor_error_no_player">No se encontraron datos del jugador.</string>
    <string name="inventory_editor_error_no_inventory">Este jugador no tiene datos de inventario.</string>
    <string name="inventory_editor_field_name">Identificador (ej: minecraft:diamond_sword)</string>
    <string name="inventory_editor_field_count">Cantidad</string>
    <string name="inventory_editor_field_damage">Daño/variante (Damage)</string>
    <string name="inventory_editor_edit_item">Editar ítem</string>
    <string name="inventory_editor_add_item">Agregar ítem</string>
    <string name="inventory_editor_delete_item">Eliminar</string>
    <string name="inventory_editor_saved">Inventario guardado.</string>
    <string name="inventory_editor_save_failed">No se pudo guardar el inventario.</string>
    <string name="inventory_editor_local_player">Jugador local</string>
    <string name="chunkbase_title">Chunkbase (buscar estructuras)</string>
    <string name="container_editor_title">Cofres cercanos</string>
    <string name="container_editor_hint">Contenedores dentro de 6 chunks de tu jugador. Toca uno para abrir su inventario.</string>
    <string name="container_editor_items_suffix">ítems</string>
    <string name="mob_editor_title">Mobs cercanos</string>
    <string name="mob_editor_hint">Mobs dentro de 6 chunks de tu jugador. Marca los que no quieres que se despawneen.</string>
    <string name="mob_editor_persistent">No despawnear</string>
    <string name="mob_editor_apply_all">Aplicar a todos</string>
    <string name="mob_editor_saved">Guardado.</string>
    <string name="save">Guardar</string>
</resources>