<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_general">

        <EditTextPreference
            app:key="pref_custom_worlds_path"
            app:title="@string/settings_custom_worlds_path_title"
            app:summary="@string/settings_custom_worlds_path_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_shizuku">

        <Preference
            app:key="pref_shizuku_status"
            app:title="@string/settings_shizuku_status_title"
            app:summary="@string/settings_shizuku_status_summary_unknown" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_plugins">

        <Preference
            app:key="pref_plugins_installed"
            app:title="@string/settings_plugins_installed_title" />

        <Preference
            app:key="pref_plugins_howto"
            app:title="@string/settings_plugins_howto_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_other">

        <Preference
            app:key="pref_clear_cache"
            app:title="@string/settings_clear_cache_title" />

        <Preference
            app:key="pref_version"
            app:title="@string/settings_version_title"
            app:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
